css/styles.css
/* stylelint-disable no-descending-specificity */

/* Element styling */

body,
form,
button,
input,
p {
  font-family:
    "Source Sans Pro",
    sans-serif;
}

body {
  background-color: #0a0e11;
}

h1,
h2,
h3,
h4,
h5,
h6,
label,
a {
  font-family: Oswald, sans-serif;
}

h1,
h2,
h3,
p,
label,
a {
  line-height: 1;
  margin: 0;
  color: #eaeaea;
}

ul {
  margin: 0;
  padding: 0;
}

button {
  background-color: #222f3b;
  border: 1px solid #939393;
  font-size: 0.9rem;
  color: #d9d9d9;
  padding: 0.17rem 0.9rem;
  margin-left: 0.4rem;
  border-radius: 0.2rem;
}

input {
  border: 1px solid #ced4da;
  border-radius: 0.2rem;
  padding: 0.2rem;
  padding-left: 0.5rem;
}

input:focus {
  outline: none;
}

img {
  width: 100%;
}

input[type="date"].modal-date-picker {
  width: 75px;
  height: 20px;
  position: relative;
  opacity: 0;
  left: 4px;
  z-index: 2;
}

button,
.exit-button,
.exit-icon,
.info-button,
.info-icon,
.add-button,
.separator-polygon,
input[type="date"] {
  cursor: pointer;
}

/* Non-semantic classes */

.lds-ring {
  display: inline-block;
  position: relative;
  width: 80px;
  height: 80px;
}

.lds-ring div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  width: 64px;
  height: 64px;
  margin: 8px;
  border: 8px solid #fff;
  border-radius: 50%;
  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  border-color: #fff transparent transparent;
}

.lds-ring div:nth-child(1) {
  animation-delay: -0.45s;
}

.lds-ring div:nth-child(2) {
  animation-delay: -0.3s;
}

.lds-ring div:nth-child(3) {
  animation-delay: -0.15s;
}

@keyframes lds-ring {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.lds-hourglass {
  display: inline-block;
  position: relative;
  width: 80px;
  height: 80px;
}

.lds-hourglass::after {
  content: " ";
  display: block;
  border-radius: 50%;
  width: 0;
  height: 0;
  margin: 8px;
  box-sizing: border-box;
  border: 32px solid #fff;
  border-color: #fff transparent;
  animation: lds-hourglass 1.2s infinite;
}

@keyframes lds-hourglass {
  0% {
    transform: rotate(0);
    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
  }

  50% {
    transform: rotate(900deg);
    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
  }

  100% {
    transform: rotate(1800deg);
  }
}

.nav-1 {
  background-color: #222f3b;
  filter: drop-shadow(0 0 0.1rem rgb(53, 53, 53));
}

.nav-1 h1 {
  font-size: 1.5rem;
  letter-spacing: 0.5px;
  padding: 1rem;
}

.nav-2 {
  background-color: #5e503f;
  border-bottom: 1px solid #334b61;
}

.nav-2 a {
  font-weight: 500;
  padding: 0.5rem 1rem;
  font-size: 1rem;
}

.nav-2 .new-exercises-text {
  display: none;
}

.no-content {
  margin: 1.5rem;
  font-size: 0.9rem;
  color: #b7b7b7;
}

.modal {
  position: absolute;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background-color: #000000a7;
}

.modal-layout {
  margin-top: 7rem;
}

.modal-content {
  width: 336px;
  background-color: #0a0e11;
  border-radius: 0.5rem;
  border: 0.4rem solid #5e503f;
  min-height: 6rem;
  padding-bottom: 1rem;
}

.modal-content h2 {
  margin: 0.7rem 0 0.9rem;
  font-size: 1.25rem;
  font-weight: 500;
}

.modal-search-container {
  text-align: right;
  margin-bottom: 0.2rem;
}

.modal-search-container input {
  width: 12rem;
}

.mod-search-cont > .upcoming-workout-entry {
  padding: 0.25rem;
  border: 3px solid #334b61;
  border-radius: 3px;
  width: 12rem;
}

.mod-search-cont .image-container > img {
  outline: 2px solid #5e503f;
}

.mod-search-cont .title-and-buttons > img.info-icon {
  position: relative;
  top: 3px;
}

.mod-search-cont .title-and-buttons > img.exit-icon {
  display: none;
}

.search-button {
  margin-bottom: 0.2rem;
}

.date-button {
  position: absolute;
  left: 0;
}

.add-button {
  margin-top: 0.38rem;
}

.date-polygon {
  margin-left: 0.2rem;
  width: 8px;
  height: 8px;
  position: relative;
  top: -1px;
}

.separator-polygon {
  display: none;
}

.work-mod-cont button {
  width: 80px;
  height: 25px;
  padding: 0;
}

.title-and-buttons > h3 {
  font-size: 0.75rem;
  padding-right: 0.25rem;
  font-weight: 400;
  margin-top: 0.25rem;
}

.info-button {
  margin-left: auto;
  font-size: 1.5rem;
  height: 2rem;
  padding: 0 0.75rem;
  border: none;
  display: none;
}

.mod-search-cont {
  max-height: 13.5rem;
  overflow: hidden;
  overflow-y: scroll;
}

.muscle-tag-container p {
  font-size: 0.65rem;
  background-color: #2f2f2f;
  border-radius: 0.2rem;
  padding: 0.1rem 0.2rem;
  margin-right: 0.4rem;
  letter-spacing: 0.02rem;
}

.info-icon,
.modal-x-icon {
  width: 16px;
  height: 16px;
  margin-right: 0.2rem;
}

.modal-x-icon {
  position: absolute;
  right: 10px;
}

.info-modal,
.workout-modal {
  position: fixed;
}

.user-message > p {
  background-color: rgb(17, 60, 100);
  padding: 0.2rem;
  border-radius: 0.1rem;
}

.user-message {
  position: absolute;
  display: flex;
  top: 0;
  left: 0;
}

.upcoming-workouts-container .plus-icon-container {
  display: none;
}

.new-exercises-container .exit-button {
  display: none;
}

.plus-icon-container {
  align-self: center;
  display: block;
  margin-right: 0.75rem;
}

.day-separator {
  padding: 0.5rem 1rem;
  background-color: #2d2c30;
}

.day-separator > h1 {
  font-size: 0.9rem;
  font-weight: 500;
}

.upcoming-workout-entry {
  padding: 1rem;
}

.upcoming-workout-entry > .image-container > img {
  width: 72px;
  height: 75px;
  border: 1px solid #5e503f;
  margin-right: 1rem;
}

.exit-icon {
  width: 1rem;
  height: 1rem;
}

.exit-button {
  width: 2rem;
  height: 2rem;
  margin: 0 0 0 0.5rem;
  display: none;
}

.new-exercises-container {
  display: none;
  min-height: 100vh;
  padding-top: 2rem;
  background-color: #2d2c30;
}

.nav-1-search-container button,
.add-button-desktop {
  font-size: 1.25rem;
  margin-right: 0.5rem;
  padding: 0.25rem 1rem;
  border-radius: 0.3rem;
  font-weight: 300;
  letter-spacing: 0.02rem;
}

.nav-1-search-container select {
  border: 1px solid #0a0e11;
  padding: 0.2rem;
}

.nav-1-search-container select,
.nav-2-date {
  font-size: 1.25rem;
  color: #717171;
  border-radius: 0.2rem;
}

.nav-2-date {
  border: none;
  padding: 0 0 0 0.5rem;
}

.date-to-workout {
  display: none;
  align-self: center;
  margin-left: auto;
}

.muscle-tag-container {
  flex-wrap: wrap;
  margin-bottom: 0.25rem;
}

.muscle-tag-container > p {
  padding: 0.1rem 0.75rem;
}

.nav-1[data-view="new-exercises"] .nav-1-search-container {
  display: none;
}

.nav-1[data-view="upcoming-workouts"] .nav-1-search-container {
  display: none;
}

.workout-modal .plus-icon-container {
  display: none;
}

.work-mod-title > img {
  width: 1rem;
  height: 1rem;
  position: absolute;
  right: 1rem;
}

.info-icon {
  margin-left: auto;
}

.info-button:hover,
.exit-button:hover,
.exit-icon:hover,
.info-icon:hover,
.separator-polygon:hover {
  filter: brightness(120%);
}

/* Semantic classes */
.flex-col {
  flex-direction: column;
}

.space-between {
  justify-content: space-between;
}

.row-lr-center {
  justify-content: center;
}

.row-ud-center {
  align-items: center;
}

.text-align-center {
  text-align: center;
}

.hidden {
  display: none;
}

.margin-auto {
  margin: auto;
}

.pointer-cursor {
  cursor: pointer;
}

.wait-cursor {
  cursor: wait;
}

.bright-hover:hover {
  filter: brightness(120%);
}

.no-user-select {
  user-select: none;
}

.ml-auto {
  margin-left: auto;
}

.text-align-left {
  text-align: left;
}

.pos-rel {
  position: relative;
}

.p-1r {
  padding: 1rem;
}

.low-brightness {
  filter: brightness(50%);
}

.w-100 {
  width: 100%;
}

.align-self-center {
  align-self: center;
}

@media only screen and (min-width: 768px) {
  button:hover {
    filter: brightness(120%);
  }

  .container {
    max-width: 720px;
  }

  .nav-1[data-view="upcoming-workouts"] .nav-1-search-container {
    display: none;
  }

  .nav-1[data-view="upcoming-workouts"] .plus-icon-container {
    display: flex;
  }

  .nav-1[data-view="new-exercises"] .nav-1-search-container {
    display: flex;
  }

  .nav-1[data-view="new-exercises"] .plus-icon-container {
    display: none;
  }

  .nav-2 .new-exercises-text {
    display: block;
  }

  .nav-2[data-view="upcoming-workouts"] .upcoming-workouts-text {
    background-color: #564b3e;
  }

  .nav-2[data-view="new-exercises"] .new-exercises-text {
    background-color: #564b3e;
  }

  .nav-2[data-view="new-exercises"] .date-to-workout {
    display: flex;
    align-self: center;
    margin-left: auto;
  }

  .exit-icon {
    display: none;
  }

  .info-icon {
    display: none;
  }

  .exit-button {
    display: block;
  }

  .info-button {
    display: block;
  }

  .nav-1 h1 {
    font-size: 1.6rem;
    letter-spacing: 0.5px;
    padding: 1.5rem 0.75rem;
  }

  .nav-2 a {
    font-weight: 500;
    padding: 1rem;
    font-size: 1.4rem;
  }

  .no-content {
    margin: 1.75rem;
    font-size: 1.25rem;
  }

  .title-and-buttons > h3 {
    font-size: 2rem;
  }

  .day-separator {
    padding: 0 1rem;
  }

  .day-separator > h1 {
    font-size: 2.5rem;
    font-weight: 500;
  }

  .muscle-tag-container p {
    position: relative;
    top: 3px;
    align-self: center;
    font-size: 1rem;
    font-weight: 300;
    height: 1.25rem;
    padding: 0 1rem;
    padding-top: 0.1rem;
    margin-right: 1rem;
  }

  .modal-content {
    width: 725px;
    margin-top: 7rem;
  }

  .modal-content h2 {
    margin: 1.5rem 0 0.9rem;
    font-size: 1.75rem;
    font-weight: 500;
  }

  .modal-x-icon {
    margin-right: 1rem;
  }

  .new-exercises-container,
  .upcoming-workouts-container {
    display: block;
    min-height: 100vh;
    padding-top: 2rem;
    background-color: #2d2c30;
  }

  .upcoming-workouts-container li.upcoming-workout-entry,
  .new-exercises-container li.upcoming-workout-entry {
    background-color: #0a0e11;
    margin: 1rem;
    border-radius: 0.25rem;
    border: 3px solid #0a0e11;
  }

  .upcoming-workouts-container .image-container > img,
  .new-exercises-container .image-container > img {
    width: 126px;
    height: 126px;
    border-radius: 0.25rem;
    border: 3px solid #5e503f;
  }

  .upcoming-workouts-container {
    padding-top: 1rem;
  }

  .separator-polygon {
    width: 1rem;
    height: 1rem;
    align-self: center;
    margin: 0 1rem;
    display: block;
  }

  .new-exercises-empty {
    margin-top: 0.75rem;
  }

  .separator-polygon:hover {
    cursor: pointer;
  }

  .desktop-hidden {
    display: none;
  }
}

